add html structure for left and right of the page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,10 +10,48 @@
     <!-- 2 custom google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@200;300;400;500;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@200;300;400;500;700&display=swap"
+        rel="stylesheet">
 
 </head>
+
 <body>
-    
+
+    <section class="hero">
+        <main id="sm-screen-size">
+
+            <section class="left">
+                <div class="img-container">
+                    <img src="img/logo.png" alt="odin-logo" />
+                    <h1>odin</h1>
+                </div>
+            </section>
+
+            <section class="right">
+                <header class="header-texts">
+                        <p>This is not a real online service! You know you need something
+                            like this in your life to help you realize your deepest dreams.
+                            Sign up <i>now</i> to get started.</p>
+
+                            <p>You <i>know</i> you want to.</p>
+                </header>
+
+                <section class="form-container">
+                    <h2>Let's do this!</h2>
+
+                    <form action="#" method="post">
+                        
+
+                    </form>
+                </section>
+            </section>
+
+        </main>
+    </section>
+
+
+
 </body>
+
 </html>
